k8s-1/k8s_webinar_1_nodejs-master-2/kube/ingress.yaml
# maybe ... apiVersion: extensions/v1
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  rules:
  - host: foo.bar.com
    http:
      paths:
      - pathType: Prefix
        path: "/foo"
        backend:
          service:
            name: kube-foo-svc
            port:
              number: 80
  - host:
    http:
      paths:
      - pathType: Prefix
        path: "/bar"
        backend:
          service:
            name: kube-bar-svc
            port:
              number: 80
